# docs/swagger.json
@@ -6,9 +6,8 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/v1",
     "paths": {
-        "/user/devices/{userDeviceID}/instant-offer": {
+        "/v1/user/devices/{userDeviceID}/instant-offer": {
             "get": {
                 "security": [
                     {
@@ -38,7 +37,7 @@
                 }
             }
         },
-        "/user/devices/{userDeviceID}/offers": {
+        "/v1/user/devices/{userDeviceID}/offers": {
             "get": {
                 "security": [
                     {
@@ -71,7 +70,7 @@
                 }
             }
         },
-        "/user/devices/{userDeviceID}/valuations": {
+        "/v1/user/devices/{userDeviceID}/valuations": {
             "get": {
                 "security": [
                     {
@@ -104,7 +103,7 @@
                 }
             }
         },
-        "/vehicles/{tokenId}/instant-offer": {
+        "/v2/vehicles/{tokenId}/instant-offer": {
             "post": {
                 "security": [
                     {
@@ -134,7 +133,7 @@
                 }
             }
         },
-        "/vehicles/{tokenId}/offers": {
+        "/v2/vehicles/{tokenId}/offers": {
             "get": {
                 "security": [
                     {
@@ -167,7 +166,7 @@
                 }
             }
         },
-        "/vehicles/{tokenId}/valuations": {
+        "/v2/vehicles/{tokenId}/valuations": {
             "get": {
                 "security": [
                     {
